[tool.poetry]
name = "stock-forecast"
version = "0.1.0"
description = "Stock price forecasting using LSTM"
authors = ["Tayo Ososanya <ososanyatayo@gmail.com>"]
license = "MIT"
packages = [{include = "stock_forecast"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.21.0"
pandas = "^1.3.0"
matplotlib = "^3.4.0"
scikit-learn = "^1.0.0"
tensorflow-cpu = "2.11.0"
yfinance = "^0.1.70"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"